--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p>Sell</p>
     </div>
     <div class="panel-deals">
-        Shop deals in Electronics
+         deals in Electronics
     </div>
 
 </div>
